err/getpaid.paymentprocessors.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/getpaid'...
Listing './lib/python3.5/site-packages/getpaid/paymentprocessors'...
Listing './lib/python3.5/site-packages/getpaid/paymentprocessors/locales'...
Listing './lib/python3.5/site-packages/getpaid/paymentprocessors/tests'...
Compiling './lib/python3.5/site-packages/getpaid/paymentprocessors/tests/base.py'...
***   File "./lib/python3.5/site-packages/getpaid/paymentprocessors/tests/base.py", line 20
    from getpaid.paymentprocessors.registry import paymentProcessorRegistry@onsetup
                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getpaid/paymentprocessors/tests/templates'...
Compiling './lib/python3.5/site-packages/getpaid/paymentprocessors/tests/test_zcml.py'...
***   File "./lib/python3.5/site-packages/getpaid/paymentprocessors/tests/test_zcml.py", line 59
    except ConfigurationError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/getpaid.paymentprocessors-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
